@@ -119,15 +119,14 @@ function GetRecipient($customerid, $type=MSG_MAIL)
 
 function BodyVars(&$body, $data)
 {
-    global $LMS, $LANGDEFS;
+	global $LMS, $LANGDEFS;
 
 	$body = str_replace('%customer', $data['customername'], $body);
 	$body = str_replace('%balance', $data['balance'], $body);
 	$body = str_replace('%cid', $data['id'], $body);
 	$body = str_replace('%pin', $data['pin'], $body);
-    if (strpos($body, '%bankaccount') !== false) {
-        $body = str_replace('%bankaccount', bankaccount($data['id']), $body);
-    }
+	if (strpos($body, '%bankaccount') !== false)
+		$body = str_replace('%bankaccount', bankaccount($data['id']), $body);
 
 	if(!(strpos($body, '%last_10_in_a_table') === FALSE))
 	{
@@ -153,7 +152,7 @@ if(isset($_POST['message']))
 {
 	$message = $_POST['message'];
 
-	$message['type'] = $message['type'] == MSG_MAIL ? MSG_MAIL : MSG_SMS;
+	$message['type'] = $message['type'] == MSG_MAIL ? MSG_MAIL : ($message['type'] == MSG_SMS ? MSG_SMS : MSG_ANYSMS);
 
 	if(empty($message['customerid']) && ($message['group'] < 0 || $message['group'] > 7))
 		$error['group'] = trans('Incorrect customers group!');
@@ -161,7 +160,7 @@ if(isset($_POST['message']))
 	if($message['type'] == MSG_MAIL)
 	{
 		$message['body'] = $message['mailbody'];
-	
+
 		if($message['sender']=='')
 			$error['sender'] = trans('Sender e-mail is required!');
 		elseif(!check_email($message['sender']))
@@ -175,8 +174,17 @@ if(isset($_POST['message']))
 		$message['body'] = $message['smsbody'];
 		$message['sender'] = '';
 		$message['from'] = '';
+		$phonenumbers = array();
+		if ($message['type'] == MSG_ANYSMS)
+		{
+			$message['phonenumber'] = preg_replace('/[ \t]/', '', $message['phonenumber']);
+			if (preg_match('/^[\+]?[0-9]+(,[\+]?[0-9]+)*$/', $message['phonenumber']))
+				$phonenumbers = preg_split('/,/', $message['phonenumber']);
+			else
+				$error['phonenumber'] = trans('Specified phone number is not correct!');
+		}
 	}
-	
+
 	if($message['subject']=='')
 		$error['subject'] = trans('Message subject is required!');
 
@@ -209,8 +217,13 @@ if(isset($_POST['message']))
 
 	if(!$error)
 	{
+		$recipients = array();
 		if(empty($message['customerid']))
-			$recipients = GetRecipients($message, $message['type']);
+			if ($message['type'] == MSG_SMS)
+				$recipients = GetRecipients($message, $message['type']);
+			else
+				foreach($phonenumbers as $phone)
+					$recipients[]['phone'] = $phone;
 		else
 			$recipients = GetRecipient($message['customerid'], $message['type']);
 
@@ -219,11 +232,11 @@ if(isset($_POST['message']))
 	}
 
 	if(!$error)
-	{	
+	{
 		set_time_limit(0);
 
 		$message['body'] = str_replace("\r", '', $message['body']);
-		
+
 		if($message['type'] == MSG_MAIL)
 			$message['body'] = wordwrap($message['body'],76,"\n");
 
@@ -241,29 +254,28 @@ if(isset($_POST['message']))
 				$AUTH->id,
 				$message['type']==MSG_MAIL ? '"'.$message['from'].'" <'.$message['sender'].'>' : '',
 			));
-		
+
 		$msgid = $DB->GetLastInsertID('messages');
 
 		foreach($recipients as $key => $row)
 		{
 			if($message['type'] == MSG_MAIL)
 				$recipients[$key]['destination'] = $row['email'];
-			else {
+			else
 				$recipients[$key]['destination'] = $row['phone'];
-			}
-			
+
 			$DB->Execute('INSERT INTO messageitems (messageid, customerid,
 				destination, status)
 				VALUES (?, ?, ?, ?)', array(
 					$msgid,
-					$row['id'],
+					isset($row['id']) ? $row['id'] : 0,
 					$recipients[$key]['destination'],
 					MSG_NEW,
 				));
 		}
-		
+
 		$DB->CommitTrans();
-		
+
 		if($message['type'] == MSG_MAIL)
 		{
 			$files = NULL;
@@ -291,7 +303,7 @@ if(isset($_POST['message']))
 			$body = $message['body'];
 
 			BodyVars($body, $row);
-			
+
 			if($message['type'] == MSG_MAIL)
 			{
 				$headers['To'] = '<'.$row['destination'].'>';
@@ -299,27 +311,27 @@ if(isset($_POST['message']))
 			}
 			else
 			{
-				$row['destination'] = preg_replace('/[^0-9]/', '', $row['destination']);
+				$row['destination'] = preg_replace('/[^\+0-9]/', '', $row['destination']);
 				echo '<img src="img/sms.gif" border="0" align="absmiddle" alt=""> ';
 			}
-			
+
 			echo trans('$a of $b ($c) $d:', ($key+1), sizeof($recipients),
 				sprintf('%02.1f%%',round((100/sizeof($recipients))*($key+1),1)),
 				$row['customername'].' &lt;'.$row['destination'].'&gt;');
 			flush();
-			
+
 			if($message['type'] == MSG_MAIL)
 				$result = $LMS->SendMail($row['destination'], $headers, $body, $files);
 			else
 				$result = $LMS->SendSMS($row['destination'], $body, $msgid);
-			
+
 			if (is_string($result))
 				echo " <font color=red>$result</font>";
 			else if ($result == MSG_SENT)
 				echo ' ['.trans('sent').']';
 			else 
 				echo ' ['.trans('added').']';
-			
+
 			echo "<BR>\n";
 
 			if (!is_int($result) || $result == MSG_SENT)
@@ -332,7 +344,7 @@ if(isset($_POST['message']))
 						$row['id'],
 					));
 		}
-		
+
 		$SMARTY->display('footer.html');
 		$SESSION->close();
 		die;
