@@ -38,6 +38,7 @@
 				<OPTION value="0"{if !$listdata.type} SELECTED{/if}>{t}- all types -{/t}</OPTION>
 				<OPTION value="{$smarty.const.MSG_MAIL}"{if $listdata.type == $smarty.const.MSG_MAIL} SELECTED{/if}>{t}email{/t}</OPTION>
 				<OPTION value="{$smarty.const.MSG_SMS}"{if $listdata.type == $smarty.const.MSG_SMS} SELECTED{/if}>{t}sms{/t}</OPTION>
+				<OPTION value="{$smarty.const.MSG_ANYSMS}"{if $listdata.type == $smarty.const.MSG_ANYSMS} SELECTED{/if}>{t}any sms{/t}</OPTION>
 			</SELECT>&nbsp;
 			{t}Status:{/t}
 			<SELECT size="1" name="status">
@@ -68,7 +69,7 @@
 			{$message.cdate|date_format:"%Y/%m/%d %H:%M"}
 		</TD>
 		<TD WIDTH="1%" ALIGN="right" NOWRAP onclick="return self.location.href='?m=messageinfo&id={$message.id}';">
-			{if $message.type == $smarty.const.MSG_SMS}
+			{if $message.type > $smarty.const.MSG_MAIL}
 			<img src="img/sms.gif" alt="sms">
 			{else}
 			<img src="img/email.gif" alt="email">
